Update old notebook

--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f280dea048>"
+       "<matplotlib.image.AxesImage at 0x1579796c5c8>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,12 +103,12 @@
     "                                  'degree': [1,2,3,4,5,6], \n",
     "                                  'C': [0.001, 0.01, 0.01, 1, 10, 100, 1000]}]\n",
     "\n",
-    "grid = GridSearchCV(SVC(), parameters, scoring='accuracy', verbose=10)"
+    "grid = GridSearchCV(SVC(), parameters, scoring='accuracy', verbose=10,n_jobs = 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "Name: label, Length: 27455, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+      "[Parallel(n_jobs=10)]: Using backend LokyBackend with 10 concurrent workers.\n",
+      "[Parallel(n_jobs=10)]: Done   5 tasks      | elapsed: 39.6min\n",
+      "[Parallel(n_jobs=10)]: Done  12 tasks      | elapsed: 79.1min\n",
+      "[Parallel(n_jobs=10)]: Done  21 tasks      | elapsed: 118.0min\n",
+      "[Parallel(n_jobs=10)]: Done  30 tasks      | elapsed: 118.9min\n",
+      "[Parallel(n_jobs=10)]: Done  41 tasks      | elapsed: 195.0min\n",
+      "[Parallel(n_jobs=10)]: Done  52 tasks      | elapsed: 234.4min\n",
+      "[Parallel(n_jobs=10)]: Done  65 tasks      | elapsed: 272.8min\n",
+      "[Parallel(n_jobs=10)]: Done  78 tasks      | elapsed: 312.1min\n",
+      "[Parallel(n_jobs=10)]: Done  93 tasks      | elapsed: 322.5min\n",
+      "[Parallel(n_jobs=10)]: Done 108 tasks      | elapsed: 341.2min\n",
+      "[Parallel(n_jobs=10)]: Done 125 tasks      | elapsed: 359.9min\n",
+      "[Parallel(n_jobs=10)]: Done 142 tasks      | elapsed: 381.3min\n",
+      "[Parallel(n_jobs=10)]: Done 161 tasks      | elapsed: 392.0min\n",
+      "[Parallel(n_jobs=10)]: Done 180 tasks      | elapsed: 445.3min\n",
+      "[Parallel(n_jobs=10)]: Done 201 tasks      | elapsed: 545.4min\n",
+      "[Parallel(n_jobs=10)]: Done 222 tasks      | elapsed: 587.2min\n",
+      "[Parallel(n_jobs=10)]: Done 245 tasks      | elapsed: 660.3min\n",
+      "[Parallel(n_jobs=10)]: Done 268 tasks      | elapsed: 723.2min\n",
+      "[Parallel(n_jobs=10)]: Done 293 tasks      | elapsed: 779.1min\n",
+      "[Parallel(n_jobs=10)]: Done 318 tasks      | elapsed: 829.1min\n",
+      "[Parallel(n_jobs=10)]: Done 345 tasks      | elapsed: 907.9min\n",
+      "[Parallel(n_jobs=10)]: Done 372 tasks      | elapsed: 984.7min\n",
+      "[Parallel(n_jobs=10)]: Done 401 tasks      | elapsed: 1074.4min\n",
+      "[Parallel(n_jobs=10)]: Done 430 tasks      | elapsed: 1127.6min\n",
+      "[Parallel(n_jobs=10)]: Done 461 tasks      | elapsed: 1177.2min\n"
      ]
     }
    ],
